--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
 }
-
 h1{
     padding-top: 1%;
     font-size: 70px;
@@ -10,44 +9,89 @@ h1{
 h3{
     font-size: 30px;
 }
+p{
+    padding-bottom: 3%;
+    text-transform: ;
+    color: dimgray;
+}
 .span-orange{
-    color: orange;
+    color: rgb(219, 16, 50);
     font-size: 80px;
 }
 section{
     display: flex;
     padding-left: 5%;
     padding-right: 5%;
-    padding-bottom: 10%;
+    padding-bottom: 7%;
 }
+
+
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.welcome-width{
+    width: 55%;
 }
 
 .half-width{
     width: 50%;
 }
+
+
+
 .half-width img{
     width: 80%; 
-    padding-top: 5%;
+    padding-top: 10%;
 }
 .first-img img{
-    padding-left: 20%;
+    width: 85%;
+    padding-top: 12%;
+    margin-left: 10%;
 }
 .second-img img{
-    padding-right: 20%;
+    padding-right: 10%;
 }
+
+
 .link-btn{
     text-decoration: none;
     color: white;
-    background-image: linear-gradient(to right, orange,orangered);
+    background-image: linear-gradient(to right, rgb(219, 16, 50),rgb(243, 20, 68));
     
-    
+    font-size: 18px;
     padding: 10px 40px;
     border-radius: 5px;
 }
-
-p{
-    padding-bottom: 3%;
+#color-design-snd-btn{
+    background-image: linear-gradient(to right,tomato, orange);
 }
+
+#ex{
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
+    margin: auto;
+    padding-top: 0%;
+    font-size: 400%;
+}
+.last-section h1{
+    font-size: 50px;
+}
+.card{
+    border-style: solid;
+    
+    
+    
+    border-color: black;
+}
+.card1{
+    margin-right: 2.5%;
+}
+.card2{
+    margin-right: 2.5%;
+}
+
+
+
+
